@@ -1,6 +1,6 @@
 use strict;
 use warnings;
-use Test::More tests => 7;
+use Test::More tests => 8;
 use Test::Exception;
 
 use_ok('npg_qc::illumina::interop::parser');
@@ -57,7 +57,83 @@ use_ok('npg_qc::illumina::interop::parser');
   is_deeply($data, \%lane_metrics, 'result for a paired run');
 }
 
+{
+  my $data = npg_qc::illumina::interop::parser->new(
+    interop_path => 't/data/autoqc/200114_HS40_32710_A_H72VGBCX3//InterOp'
+  )->parse();
+
+  my $expected = {
+          'aligned_stdev' => {
+                               '2' => {
+                                        '4' => '0.925762434191217',
+                                        '1' => '0.635884419339578'
+                                      },
+                               '1' => {
+                                        '4' => '0.920239873819165',
+                                        '1' => '0.70644559859785'
+                                      }
+                             },
+          'aligned_mean' => {
+                              '2' => {
+                                       '1' => '29.9058274030685',
+                                       '4' => '28.7443390488625'
+                                     },
+                              '1' => {
+                                       '4' => '28.7805494368076',
+                                       '1' => '29.8132521212101'
+                                     }
+                            },
+          'cluster_pf_stdev' => {
+                                  '1' => '0.767446115466015',
+                                  '2' => '0.842222836938437'
+                                },
+          'cluster_density_pf_stdev' => {
+                                          '2' => '57843.5445597774',
+                                          '1' => '56319.2818033671'
+                                        },
+          'cluster_pf_mean' => {
+                                 '1' => '89.3431932013788',
+                                 '2' => '88.8107128348017'
+                               },
+          'cluster_count_stdev' => {
+                                     '1' => '194232.546545831',
+                                     '2' => '200791.066382471'
+                                   },
+          'cluster_density_pf_mean' => {
+                                         '1' => '538884.636230469',
+                                         '2' => '558776.424316406'
+                                       },
+          'cluster_density_mean' => {
+                                      '1' => '603599.771972656',
+                                      '2' => '629635.858398438'
+                                    },
+          'cluster_count_total' => {
+                                     '2' => '116611547',
+                                     '1' => '111789540'
+                                   },
+          'cluster_density_stdev' => {
+                                       '1' => '67119.67769162',
+                                       '2' => '69386.0654817665'
+                                     },
+          'cluster_count_mean' => {
+                                    '1' => '1746711.5625',
+                                    '2' => '1822055.421875'
+                                  },
+          'cluster_count_pf_mean' => {
+                                       '2' => '1617000.734375',
+                                       '1' => '1559437.375'
+                                     },
+          'cluster_count_pf_total' => {
+                                        '1' => '99803992',
+                                        '2' => '103488047'
+                                      },
+          'cluster_count_pf_stdev' => {
+                                        '2' => '167389.050383036',
+                                        '1' => '162978.117109493'
+                                      }
+        };
+
+  is_deeply($data, $expected, 'result for multiple tiles');
+}
+
 1;
-
-
-
