@@ -1,0 +1,19 @@
+<?xml version="1.0"?>
+<RunInfo xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" Version="2">
+  <Run Id="200114_HS40_32710_A_H72VGBCX3" Number="690">
+    <Flowcell>H72VGBCX3</Flowcell>
+    <Instrument>D00586</Instrument>
+    <Date>200114</Date>
+    <Reads>
+      <Read Number="1" NumCycles="75" IsIndexedRead="N" />
+      <Read Number="2" NumCycles="12" IsIndexedRead="Y" />
+      <Read Number="3" NumCycles="11" IsIndexedRead="Y" />
+      <Read Number="4" NumCycles="75" IsIndexedRead="N" />
+    </Reads>
+    <FlowcellLayout LaneCount="2" SurfaceCount="2" SwathCount="2" TileCount="16" />
+    <AlignToPhiX>
+      <Lane>1</Lane>
+      <Lane>2</Lane>
+    </AlignToPhiX>
+  </Run>
+</RunInfo>
